# serial_communicator

./: .gitignore  CMakeLists.txt  README.md
ebimu/: main_parse.cc  vinsmono deriv
include/: crc16.cc  crc16.h  serial_comm.h  serial_communicator.cc  serial_communicator.h
include/legacy/: serial_comm.h
mega_mpu6050_serial/: mega_mpu6050_serial.ino
src/: crc16.cc  crc16.h  main.cc  main_serial.cpp  serial_communicator.cc  serial_communicator.h  timer.cc  timer.h  union_struct.h
src/legacy/: serial_comm.h
